fixing overflow

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -2,10 +2,12 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding:0;
+    margin: 0;
     max-width: 100%;
-    min-height: 100%;
+    height: 100vh;
     margin: 0 auto;
     box-sizing: border-box;
+    overflow-y: hidden;
   }   
 
 input::placeholder{
